# AgentForge

./: .AGENT_WORKTREE  .env.xai  .env.xai.example  .env.xai.mb2  .gitignore  .gitmessage  .grok-last-reviewed  .pure_rust_flywheel  AGENTFORGE_CODE_MANAGEMENT_PLAN.md  AGENTFORGE_ROUTING_AND_EXECUTION_REFACTOR_PLAN.md  AGENTS.md  AGENTS.md.disabled  ANTIGRAVITY_DEFAULT.md  CONTRIBUTING.md  FARM_ROLLOUT_CHECKLIST.md  FIDELITY_GATE_REPORT.md  HANDOFF_PureRustFlywheel_2026-05-31.md  IMPACT_REPORT.md  JULES_AUTO_FLYWHEEL_AFTER_TASK.md  JULES_FARM_INTEGRATION.md  JULES_FLYWHEEL_DEMO.md  JULES_LIVE_WORKER_INTEGRATION.md  JULES_OUTCOME_UNIFICATION.md  JULES_PRODUCTION_POLISH.md  MIGRATION_PROGRESS.md  PHASE2_SHADOW_FIDELITY_PREP.md  PHASE4_READY_FOR_SOAK.md  PHASE4_REMOVAL_CHECKLIST.md  README.md  REPO_STRUCTURE.md  RUST_100_CORE_TASK_WAVE.md  RUST_FLYWHEEL_100_SPRINT.md  RUST_MIGRATION_PARALLEL_TRACKS.md  TURBO_VELOCITY_REPORT.md  VICTORY_SUMMARY.md  __init__.py  agent_cards.json  agentforge-antigravity.service  agentforge-api.service  agentforge-flywheel.service  (+71 more)
.github/: BRANCH_PROTECTION.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md
agents/: agy_runner.sh  gemini_runner.sh  grok_runner.sh  grok_runner.sh.bak.ci  jules_runner.sh
config/: deploy_rules.json  settings.py
core/: __init__.py  agentforge_create_task.py  agentforge_watchdog.py  grok_worker.py  task_checkpoints.py  task_queue.py
docs/: A1_BRANCH_PROTECTION_RESEARCH_REPORT.md  A2_AGENT_REVIEW_HANDOFF_ea0b6a37.md  A2_BRANCH_PROTECTION_AGENT_REVIEW_HANDOFF.md  A4_CI_AGENT_REVIEW_HANDOFF_8806e0a2.md  A7_BRANCH_PROTECTION_AGENT_REVIEW_HANDOFF.md  ACCELERATION_NOTES_WAVE2.md  AGENTFORGE_DOGFOODING_PLAYBOOK.md  AGENTFORGE_RUNNER_TASK_GUIDE.md  AGENT_REVIEW_HANDOFF_3cdd6813_b50d6187.md  AGENT_REVIEW_HANDOFF_429505e0.md  AGENT_RUST_TRANSITION_GUIDE.md  ANTIGRAVITY_AGENT_GUIDELINES.md  ANTIGRAVITY_C1C2_CI_POLICY_AGENT_REVIEW_HANDOFF_4486e400.md  ANTIGRAVITY_ORCHESTRATION_PROTOCOL.md  BRANCHING_STRATEGY.md  BRANCH_PROTECTION_A2_PROPOSAL.md  BRANCH_PROTECTION_A7_DECISION.md  CI_POLICY.md  CLAIM_WORKFLOW_DESIGN.md  CM_c2492e01_AGENT_REVIEW_HANDOFF.md  CODE_MGMT_DOCUMENTATION_STATUS.md  FINAL_MERGE_CHECKLIST_P1_P2.md  FLYWHEEL_PYTHON_AUDIT.md  JULES_MULTI_REPO_GUIDE.md  JULES_PY_REMOVAL_HANDOFF_f29c675b.md  JULES_WORKER_AUDIT.md  LANCE_TASK_STORE_MIGRATION_PLAN.md  MANUAL_DISPATCH_WAVE2.md  PHASE1_B4_MIRROR_SOT_DECISION.md  PHASE1_TASK_BREAKDOWN.md  PHASE2_TASK_BREAKDOWN.md  PHASE3_TASK_BREAKDOWN.md  PHASE4_FLYWHEEL_REMOVAL_CHECKLIST.md  POST_100_TRACEABILITY_AUDIT_3c9540b2.md  PROBLEM_GROK_TMUX_DISPATCH_20260614.md  PROGRESS_REPORT_2026-06.md  PROVENANCE_AUDIT_SCRIPT_UPDATE.md  PROVENANCE_AUDIT_UPDATE.md  PYTHON_ENTRYPOINTS_MIGRATION.md  PY_RUST_SCAN_5af0e350_AGENT_REVIEW_HANDOFF.md  (+15 more)
eval/: JULES_WORK_SUMMARY.md  README.md  USAGE.md  __init__.py  __main__.py  analyze_trajectories.py  cli.py  export_learning_dataset.py  generate_evaluation_report.py  history.py  insights.py  log_trajectory.sh  mappings.py  phase1_demo.py  post_process.py  prm.py  regression.py  report.py  run_batch.py  run_tests.py  runner.py  schemas.py  suggest.py  trajectory.py  trajectory_viewer.py  utils.py
examples/: phase2_3_early_demo.py  phase2_3_unified_power_demo.py  run_with_planning_and_safety.py
gateway/: Cargo.toml  agent_cards.json  cancel_load_tasks.py  create_load_tasks.py
gateway/src/: main.rs  task_cache.rs
gateway/static/: dashboard.html  leaderboard.html
gateway/static/analytics/: departments.html  index.html  revenue.html  spy.html  spy_data.json  spy_gs.json
gateway/static/merchandising/: index.html  screwdrivers_data.json
gateway/static/monitoring/: autonomous.html  index.html  wallpaper.html  wallpaper_matches.json
gateway/static/parsing/: index.html  index_old_green.html
learning/: __init__.py  dataset.py  evaluator.py  pending_candidates.py  skill_improver.py  trainer_interface.py  trajectory_dataset.py  utils.py
long_horizon/: __init__.py  task_manager.py
monitoring/: grafana-datasources.yml  loki-config.yml  promtail-config.yml
observability/: README.md  __init__.py  replay.py  spans.py
planning/: __init__.py  planner.py
rust/: ARCHITECTURE.md  Cargo.toml  JULES_INTEGRATION_UPDATE.md  JULES_OUTCOME_UNIFICATION.md  JULES_RICH_FLYWHEEL_EXPORT.md  JULES_RUNNER_CLI_POLISH.md  JULES_RUNNER_FLYWHEEL_EXPORT.md  JULES_RUST_PORT_REVIEW.md  JULES_TURBO_WAVE_2.md  PYO3_INTEGRATION.md  README.md  RUST_CORE_DEVELOPMENT_GUIDE.md
rust/crates/agentforge-candidates/: Cargo.toml
rust/crates/agentforge-candidates/src/: lib.rs  prioritizer.rs  promote.rs  store.rs
rust/crates/agentforge-core/: Cargo.toml
rust/crates/agentforge-core/src/: agent.rs  config.rs  lance_task_store.rs  lib.rs  outcome.rs  task.rs
rust/crates/agentforge-flywheel/: Cargo.toml
rust/crates/agentforge-flywheel/src/: lib.rs  orchestrator.rs  types.rs
rust/crates/agentforge-learning/: Cargo.toml
rust/crates/agentforge-learning/src/: dataset.rs  improver.rs  lib.rs  trainer.rs  types.rs
rust/crates/agentforge-learning/training_ready/kto/run-93caa130/: kto_examples.jsonl
rust/crates/agentforge-learning/training_ready/sft/: sft_success_trajectories.jsonl
rust/crates/agentforge-long-horizon/: Cargo.toml
rust/crates/agentforge-long-horizon/src/: lib.rs  task_manager.rs
rust/crates/agentforge-mcp/: Cargo.toml
rust/crates/agentforge-mcp/src/: main.rs
rust/crates/agentforge-observability/: Cargo.toml
rust/crates/agentforge-observability/src/: lib.rs
rust/crates/agentforge-planning/: Cargo.toml
rust/crates/agentforge-planning/src/: lib.rs  planner.rs
rust/crates/agentforge-runner/: Cargo.toml
rust/crates/agentforge-runner/examples/: phase2_3_vision.rs
rust/crates/agentforge-runner/src/: lib.rs  main.rs
rust/crates/agentforge-safety/: Cargo.toml
rust/crates/agentforge-safety/src/: lib.rs  policy_engine.rs
safety/: __init__.py  approval.py  policy_engine.py  sandbox.py
scripts/: apply_parallel_limits.py  create_audit_tasks.py  dedup_lance_tasks.py  ensure_cargo_optimization.sh  ensure_mold.sh  ensure_rust_devtools.sh  (+16 more)
(+2416 files in other folders)
