[package]
name = "agentforge-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }

# LanceDB is optional because of heavy transitive dependencies (lance + AWS stuff)
# that often cause resolution problems with certain crates.io mirrors.
# Enable with: cargo build -p agentforge-core --features lancedb
# LanceDB: upgraded from 0.4 to 0.15 to fix arrow-arith v51 chrono::quarter() conflict
lancedb = { version = "0.15", optional = true }
arrow-array = { version = "53", optional = true }
arrow-schema = { version = "53", optional = true }
futures = { version = "0.3", optional = true }
tokio = { workspace = true, features = ["sync"], optional = true }
anyhow = { workspace = true }

[features]
lancedb = ["dep:lancedb", "dep:arrow-array", "dep:arrow-schema", "dep:futures", "dep:tokio"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

