[package]
name = "agentforge-learning"
version = "0.1.0"
edition = "2021"

[dependencies]
agentforge-core = { path = "../agentforge-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
proptest = "1"
