[package]
name = "agentforge-long-horizon"
version = "0.1.0"
edition = "2021"
description = "AgentForge Long Horizon task management (Phase 3) - checkpoints, resumption, heartbeats for multi-hour/day tasks"
license = "MIT"

[dependencies]
agentforge-core = { path = "../agentforge-core" }
agentforge-planning = { path = "../agentforge-planning" }
agentforge-safety = { path = "../agentforge-safety" }
agentforge-observability = { path = "../agentforge-observability" }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
# tokio optional removed for minimal offline build; add back when async needed
# tokio = { workspace = true, optional = true }

[features]
default = []
